more druid scripts