@@ -1,20 +1,6 @@
 #!/usr/bin/env bash
 
-#JAVA_OPTIONS="-server
-#-Xmx6g
-#-Xms6g
-#-XX:NewSize=1g
-#-XX:MaxNewSize=1g
-#-XX:MaxDirectMemorySize=9g
-#-XX:+UseConcMarkSweepGC
-#-XX:+PrintGCDetails
-#-XX:+PrintGCTimeStamps
-#-XX:+HeapDumpOnOutOfMemoryError
-#-Duser.timezone=UTC
-#-Dfile.encoding=UTF-8
-#-Dcom.sun.management.jmxremote.port=17071
-#-Dcom.sun.management.jmxremote.authenticate=false
-#-Dcom.sun.management.jmxremote.ssl=false"
+
 
 java -Xmx256m -Duser.timezone=UTC -Dfile.encoding=UTF-8 -classpath config/_common:config/coordinator:lib/* io.druid.cli.Main server coordinator &
 
